BUG fix: text-size-adjust was missing "-webkit-", which broke the code formatter/highlighter on iOS. There should be no relationship between text-size-adjust and code highlighting - REVISIT.

--- a/src/css/tz-commons/tzCommons.css
+++ b/src/css/tz-commons/tzCommons.css
@@ -6,7 +6,7 @@
   ================================================================== */
 
 html {
-  text-size-adjust: none; /* Prevent font scaling in landscape */
+  -webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
 }
 
 body {
